--- a/reports/Test-Report-2025.08.14.11.30.27.html
+++ b/reports/Test-Report-2025.08.14.11.30.27.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">opencart Functional Testing</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Aug 13, 2025 01:44:59 pm</span></a>
+<a href="#"><span class="badge badge-primary">Aug 14, 2025 11:30:27 am</span></a>
 </li>
 </ul>
 </div>
@@ -82,7 +82,7 @@
           <div class="test-detail">
             <p class="name">cabBooking.MakeMyTrip_TestNG</p>
             <p class="text-sm">
-              <span>1:45:08 pm</span> / <span>00:00:00:006</span>
+              <span>11:30:41 am</span> / <span>00:00:00:050</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -91,9 +91,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">cabBooking.MakeMyTrip_TestNG</h5>
-<span class='badge badge-success'>08.13.2025 1:45:08 pm</span>
-<span class='badge badge-danger'>08.13.2025 1:45:09 pm</span>
-<span class='badge badge-default'>00:00:00:006</span>
+<span class='badge badge-success'>08.14.2025 11:30:41 am</span>
+<span class='badge badge-danger'>08.14.2025 11:30:41 am</span>
+<span class='badge badge-default'>00:00:00:050</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -106,7 +106,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:45:09 pm</td>
+        <td>11:30:41 am</td>
         <td>
           makeMyTrip got successfully executed
         </td>
@@ -123,7 +123,7 @@
           <div class="test-detail">
             <p class="name">cabBooking.MakeMyTrip_TestNG</p>
             <p class="text-sm">
-              <span>1:45:10 pm</span> / <span>00:00:00:000</span>
+              <span>11:30:43 am</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -132,8 +132,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">cabBooking.MakeMyTrip_TestNG</h5>
-<span class='badge badge-success'>08.13.2025 1:45:10 pm</span>
-<span class='badge badge-danger'>08.13.2025 1:45:10 pm</span>
+<span class='badge badge-success'>08.14.2025 11:30:43 am</span>
+<span class='badge badge-danger'>08.14.2025 11:30:43 am</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -147,7 +147,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:45:10 pm</td>
+        <td>11:30:43 am</td>
         <td>
           navigateToCabs got successfully executed
         </td>
@@ -164,7 +164,7 @@
           <div class="test-detail">
             <p class="name">cabBooking.MakeMyTrip_TestNG</p>
             <p class="text-sm">
-              <span>1:45:20 pm</span> / <span>00:00:00:000</span>
+              <span>11:30:56 am</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -173,8 +173,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">cabBooking.MakeMyTrip_TestNG</h5>
-<span class='badge badge-success'>08.13.2025 1:45:20 pm</span>
-<span class='badge badge-danger'>08.13.2025 1:45:20 pm</span>
+<span class='badge badge-success'>08.14.2025 11:30:56 am</span>
+<span class='badge badge-danger'>08.14.2025 11:30:56 am</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -188,7 +188,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:45:20 pm</td>
+        <td>11:30:56 am</td>
         <td>
           selectFromAndToCity got successfully executed
         </td>
@@ -205,7 +205,7 @@
           <div class="test-detail">
             <p class="name">cabBooking.MakeMyTrip_TestNG</p>
             <p class="text-sm">
-              <span>1:45:30 pm</span> / <span>00:00:00:000</span>
+              <span>11:31:06 am</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -214,8 +214,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">cabBooking.MakeMyTrip_TestNG</h5>
-<span class='badge badge-success'>08.13.2025 1:45:30 pm</span>
-<span class='badge badge-danger'>08.13.2025 1:45:30 pm</span>
+<span class='badge badge-success'>08.14.2025 11:31:06 am</span>
+<span class='badge badge-danger'>08.14.2025 11:31:06 am</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -229,7 +229,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:45:30 pm</td>
+        <td>11:31:06 am</td>
         <td>
           selectSUV got successfully executed
         </td>
@@ -246,7 +246,7 @@
           <div class="test-detail">
             <p class="name">cabBooking.MakeMyTrip_TestNG</p>
             <p class="text-sm">
-              <span>1:45:31 pm</span> / <span>00:00:00:000</span>
+              <span>11:31:11 am</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -255,8 +255,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">cabBooking.MakeMyTrip_TestNG</h5>
-<span class='badge badge-success'>08.13.2025 1:45:31 pm</span>
-<span class='badge badge-danger'>08.13.2025 1:45:31 pm</span>
+<span class='badge badge-success'>08.14.2025 11:31:11 am</span>
+<span class='badge badge-danger'>08.14.2025 11:31:11 am</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -270,7 +270,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:45:31 pm</td>
+        <td>11:31:11 am</td>
         <td>
           lowestCharge got successfully executed
         </td>
@@ -280,24 +280,24 @@
 </div>
           </div>
         </li>
-        <li class="test-item"  status="pass" test-id="6"
+        <li class="test-item"  status="fail" test-id="6"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">cabBooking.MakeMyTrip_TestNG</p>
             <p class="text-sm">
-              <span>1:45:41 pm</span> / <span>00:00:00:000</span>
-              <span class="badge pass-bg log float-right">Pass</span>
+              <span>11:31:14 am</span> / <span>00:00:00:000</span>
+              <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">cabBooking.MakeMyTrip_TestNG</h5>
-<span class='badge badge-success'>08.13.2025 1:45:41 pm</span>
-<span class='badge badge-danger'>08.13.2025 1:45:41 pm</span>
+<h5 class="test-status text-fail">cabBooking.MakeMyTrip_TestNG</h5>
+<span class='badge badge-success'>08.14.2025 11:31:14 am</span>
+<span class='badge badge-danger'>08.14.2025 11:31:14 am</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -310,10 +310,17 @@
   <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
   <tbody>
       <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:45:41 pm</td>
+        <td><span class="badge log fail-bg">Fail</span></td>
+        <td>11:31:14 am</td>
         <td>
-          adultCount got successfully executed
+          adultCount got failed
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>11:31:14 am</td>
+        <td>
+          Cannot invoke "Helper.ExcelUtils.setCellData(String, int, int, String)" because "this.util" is null
         </td>
       </tr>
   </tbody>
@@ -321,24 +328,24 @@
 </div>
           </div>
         </li>
-        <li class="test-item"  status="fail" test-id="7"
+        <li class="test-item"  status="pass" test-id="7"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">cabBooking.MakeMyTrip_TestNG</p>
             <p class="text-sm">
-              <span>1:45:52 pm</span> / <span>00:00:00:000</span>
-              <span class="badge fail-bg log float-right">Fail</span>
+              <span>11:31:33 am</span> / <span>00:00:00:000</span>
+              <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">cabBooking.MakeMyTrip_TestNG</h5>
-<span class='badge badge-success'>08.13.2025 1:45:52 pm</span>
-<span class='badge badge-danger'>08.13.2025 1:45:52 pm</span>
+<h5 class="test-status text-pass">cabBooking.MakeMyTrip_TestNG</h5>
+<span class='badge badge-success'>08.14.2025 11:31:33 am</span>
+<span class='badge badge-danger'>08.14.2025 11:31:33 am</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -351,25 +358,10 @@
   <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
   <tbody>
       <tr class="event-row">
-        <td><span class="badge log fail-bg">Fail</span></td>
-        <td>1:45:52 pm</td>
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>11:31:33 am</td>
         <td>
-          validateResult got failed
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>1:45:52 pm</td>
-        <td>
-          element not interactable
-  (Session info: chrome=138.0.7204.101)
-Build info: version: '4.34.0', revision: '707dcb4246*'
-System info: os.name: 'Windows 11', os.arch: 'amd64', os.version: '10.0', java.version: '21.0.6'
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [e2f930372a72ffb2026370c87f46282f, clickElement {id=f.5ED74F1FDBCF5F9F1D232F2E91549742.d.619C29B65541124AC1FCA1DECFDF5073.e.407}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 138.0.7204.101, chrome: {chromedriverVersion: 138.0.7204.183 (e90faf484dd..., userDataDir: C:\Users\2419352\AppData\Lo...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:54737}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:54737/devtoo..., se:cdpVersion: 138.0.7204.101, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (e2f930372a72ffb2026370c87f46282f)] -> xpath: //a[@data-cy = 'submenu_Giftcards']]
-Session ID: e2f930372a72ffb2026370c87f46282f
+          validateResult got successfully executed
         </td>
       </tr>
   </tbody>
@@ -384,7 +376,7 @@ Session ID: e2f930372a72ffb2026370c87f46282f
           <div class="test-detail">
             <p class="name">cabBooking.MakeMyTrip_TestNG</p>
             <p class="text-sm">
-              <span>1:45:52 pm</span> / <span>00:00:00:000</span>
+              <span>11:31:33 am</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -393,8 +385,8 @@ Session ID: e2f930372a72ffb2026370c87f46282f
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">cabBooking.MakeMyTrip_TestNG</h5>
-<span class='badge badge-success'>08.13.2025 1:45:52 pm</span>
-<span class='badge badge-danger'>08.13.2025 1:45:52 pm</span>
+<span class='badge badge-success'>08.14.2025 11:31:33 am</span>
+<span class='badge badge-danger'>08.14.2025 11:31:33 am</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=8</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -408,7 +400,7 @@ Session ID: e2f930372a72ffb2026370c87f46282f
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:45:52 pm</td>
+        <td>11:31:33 am</td>
         <td>
           captureScreenshot got successfully executed
         </td>
@@ -432,13 +424,13 @@ Session ID: e2f930372a72ffb2026370c87f46282f
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Aug 13, 2025 01:44:59 pm</h3>
+<h3>Aug 14, 2025 11:30:27 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Aug 13, 2025 01:45:58 pm</h3>
+<h3>Aug 14, 2025 11:31:41 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -508,7 +500,7 @@ Session ID: e2f930372a72ffb2026370c87f46282f
 </div></div>
 <script>
 var timeline = {
-"cabBooking.MakeMyTrip_TestNG":0.006,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0
+"cabBooking.MakeMyTrip_TestNG":0.05,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0,"cabBooking.MakeMyTrip_TestNG":0
 };
 </script>
 <div class="row">
